rtg_tests/negative/unaddressable_array_slice/go.mod
module example.com/rtgtests/negative/unaddressable_array_slice

go 1.25
